    compared. Closes: #570008
  * dpkg-gencontrol does no longer accept arch-specific dependencies in
    arch: all packages. Closes: #560071
  * dpkg-gencontrol no longer warns if a substitution variable provided by -V
    is not used (the warning is meant to catch unused substitutions coming
    from the file, those are package specific with debhelper). Closes: #557133

  [ Guillem Jover ]
  * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
    in a way consistent with the rest of the tools.
  * Recognize --help in addition to -h in dpkg-checkbuilddeps.
  * Add a --version option to dpkg-checkbuilddeps.
  * Improve and mark more messages in writedb() to make translators lifes
    easier. Closes: #408525
  * Improve update-alternatives --display output to use two leading spaces
    for current link and slave information. Use single quotes for both “best”
    and the alternative it's pointing to. Closes: #549167
  * Refer to “half configured” instead of “failed config” in «dpkg-query -l»
    header and dselect package status printing for consistency.
  * Make “dpkg-statoverride --quiet” actually do something, and quiesce
    most of the inoquous warning messages. Closes: #403211
  * Make “dpkg-statoverride --update --add” fail if it cannot update the
    mode and owner of the file. This would fail later on when dpkg itself
    applies the overrides, so better to signal this earlier.
  * Add sparc64 to cputable. Thanks to Aurelien Jarno <aurel32@debian.org>.
    Closes: #560010
  * Do not allow diverting a file to itself, which makes the file to get
    removed. Closes: #312206
  * Make the check for duplicate fields in a stanza in libdpkg actually work,
    which now makes it fatal, as was intended originally. This should not
    cause problems for anything using dpkg-dev to build packages as those
    are already fatal on that case.
  * Add new deb-split(5) man page.
  * Fix misspellings of “explicitly” all over the place.