@@ -41,6 +41,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * dpkg-gencontrol no longer warns if a substitution variable provided by -V
     is not used (the warning is meant to catch unused substitutions coming
     from the file, those are package specific with debhelper). Closes: #557133
+  * dpkg-gencontrol now indicates which package is concerned by the substvars
+    warning that it displays. Closes: #566837
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
